--- a/font/index.html
+++ b/font/index.html
@@ -8,7 +8,7 @@
 			p{
 				font: normal normal 24px/1.5 "微软雅黑";
 				text-indent: 2em;
-				font-family: "华文行楷",simsun,simhei;
+				font-family: simsun,simhei;
 			}
 			h1{
 				font: nomarl normal 36px/2;
